Impossible to copy a linked object from a file to another one mantaining the linked library #48416

Closed
opened 2016-05-13 00:18:51 +02:00 by Daniele De Luca · 8 comments

System Information
Ubuntu 64 bit, Windows 7 64 bit

Blender Version
Broken: 2.77, 2.77a
Worked: 2.76, 2.76b

Short description of error
It's impossible to copy a linked object (mantaining the linked library) from a file to another one

Exact steps for others to reproduce the error

  • Create a file named library.blend with a cube inside
  • Insert the cube into a group (named cube_group)
  • Create a file named scene1.blend and link inside it the cube_group from library.blend, move our scale or pose your cube_group inside the scene 1
  • Create scene2.blend and append the object cube_group from the scene1.blend inside the scene 2

otherwise we can append a whole scene ( with linked libraries) into a new file to see that now all the libraries are lost

In the zip file there are:

  • a library.blend file
  • a scene1.blend file with the link to the group in the library
  • a scene2.blend file with the append of the empty from the scene1.blend. Here the link to the mesh is lost (the mesh is into the scene)
  • a scene2_blender276.blend file with the correct append behaviour from Blender 2.76b

library_append.zip

**System Information** Ubuntu 64 bit, Windows 7 64 bit **Blender Version** Broken: 2.77, 2.77a Worked: 2.76, 2.76b **Short description of error** It's impossible to copy a linked object (mantaining the linked library) from a file to another one **Exact steps for others to reproduce the error** - Create a file named library.blend with a cube inside - Insert the cube into a group (named cube_group) - Create a file named scene1.blend and link inside it the cube_group from library.blend, move our scale or pose your cube_group inside the scene 1 - Create scene2.blend and append the object cube_group from the scene1.blend inside the scene 2 otherwise we can append a whole scene ( with linked libraries) into a new file to see that now all the libraries are lost In the zip file there are: - a library.blend file - a scene1.blend file with the link to the group in the library - a scene2.blend file with the append of the empty from the scene1.blend. Here the link to the mesh is lost (the mesh is into the scene) - a scene2_blender276.blend file with the correct append behaviour from Blender 2.76b [library_append.zip](https://archive.blender.org/developer/F310334/library_append.zip)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Sparazza

Added subscriber: @Sparazza

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Caused by 591f4549c9

Caused by 591f4549c9
Bastien Montagne self-assigned this 2016-05-13 09:01:40 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by a91a49ba8e

This issue was referenced by a91a49ba8e3de3879688e9ca9c2289c231965cf2

This issue was referenced by 5e0ec49570

This issue was referenced by 5e0ec49570fa745c28bd028cb7796733a1d9dfce

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48416
No description provided.